[gd_scene load_steps=21 format=2]

[ext_resource path="res://Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player_A.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Score_Board.gd" type="Script" id=3]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/Message_Board.gd" type="Script" id=5]
[ext_resource path="res://scripts/main.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 8, 0.1, 18 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 16, 0.2, 36 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.454902, 0.454902, 0.454902, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 8, 1, 0.5 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 16, 2, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.980392, 0.92549, 0.482353, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.482353, 0.94902, 0.533333, 1 )

[sub_resource type="CapsuleShape" id=8]
radius = 0.75
height = 3.0

[sub_resource type="CapsuleMesh" id=9]
radius = 0.75
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.457947, 0.953125, 0.618774, 1 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 1, 2, 8 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.231445, 0.242048, 0.25, 1 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.5, 1, 4 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 10, 2, 18 )

[node name="Root" type="Spatial"]
script = ExtResource( 6 )

[node name="Timer_Get_Data" type="Timer" parent="."]
autostart = true

[node name="Timer_Save_Data" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Goal_A" type="StaticBody" parent="." groups=[
"Goal",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -17.5 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Goal_A"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Goal_A"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Goal_B" type="StaticBody" parent="." groups=[
"Goal",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 17.5 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Goal_B"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Goal_B"]
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, 0, 25, 0 )
fov = 50.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.760702, -0.477957, 0.439192, -0.5, 1.6331e-07, 0.866025, -0.413923, -0.878384, -0.238978, 7, 10, 0 )
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_split_1 = 0.272
directional_shadow_split_2 = 0.77
directional_shadow_split_3 = 1.0

[node name="Player_A" parent="." instance=ExtResource( 2 )]
collision_mask = 0

[node name="Player_B" type="KinematicBody" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 1.25, 15 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Player_B"]
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="Player_B"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Border1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 1, -9 )
collision_layer = 4
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Border1"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Border1"]
shape = SubResource( 13 )

[node name="Border2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 1, -9 )
collision_layer = 4
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Border2"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Border2"]
shape = SubResource( 13 )

[node name="Border3" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5, 1, 9 )
collision_layer = 4
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Border3"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Border3"]
shape = SubResource( 13 )

[node name="Border4" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 1, 9 )
collision_layer = 4
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Border4"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Border4"]
shape = SubResource( 13 )

[node name="Ball" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="GameArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="GameArea"]
shape = SubResource( 14 )

[node name="Score_Board" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 4 )
text = "Player A Score: 0    Player B Score: 0"
align = 1
valign = 1
uppercase = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message_Board" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -69.0
custom_fonts/font = ExtResource( 4 )
text = "Message Goes Here"
align = 1
valign = 1
uppercase = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message_Timer" type="Timer" parent="Message_Board"]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Timer_Get_Data" to="." method="_on_Timer_Get_Data_timeout"]
[connection signal="timeout" from="Timer_Save_Data" to="." method="_on_Timer_Save_Data_timeout"]
[connection signal="foul" from="Ball" to="Score_Board" method="_on_Ball_foul"]
[connection signal="goal" from="Ball" to="Score_Board" method="_on_Ball_goal"]
